# Basil_SOSP21_artifact

./: .gitignore  LICENSE  Makefile  README.md  setup
experiment-configs/4-Micro: Reads/: 1.json  2f+1.json  combined.json  f+1.json
experiment-scripts/: regenerate_plots.py  run_experiment.py  run_multiple_experiments.py
experiment-scripts/lib/: __init__.py  experiment_codebase.py  indicus_codebase.py  morty_codebase.py  rdma_repl_codebase.py  (+1 more)
experiments/: retwis-batchin-linear.json  retwis-batching-test.json  retwis-contention-bottleneck.json  retwis-cpu-bottleneck.json  retwis-crypto.json  retwis-geo.json  retwis-tapir-reproduce.json  retwis.json  rw-test.json  rw.json  test.json  tpcc-cc-test.json  tpcc-cpu-bottleneck.json  tpcc-geo.json  tpcc-test.json  tpcc.json
helper-scripts/: disable_HT.sh  turn_off_turbo.sh
lib/: assert.h  configuration.cc  configuration.h  io_utils.cc  latency.cc  message.h  repltransport.cc  repltransport.h  simtransport.cc  simtransport.h  tcptransport.cc  tcptransport.h  transport.cc  transport.h  transportcommon.h  udptransport.cc  udptransport.h
lockserver/: lockserver-repl.cc
src/: .gitignore  Makefile  clean_remote.sh  client-tester.sh  disableHT.sh  enableHT.sh  keygen.sh  server-tester.sh  shard-r0.config  shard-r1.config  shard-r4.config  shard-r6.config  shard-ur0.config  test.sh  testpbft.sh  turn_off_turbo.sh  upload_bin.sh
src/store/hotstuffstore/libhotstuff/examples/: .gitignore  CMakeLists.txt  hotstuff_app.cpp  hotstuff_client.cpp  indicus_interface.cpp  indicus_interface.h  pompe_app.cpp  pompe_client.cpp  remote_config_dir.h
store/: Rules.mk  janus.config  janus0.config  janus1.config  server.cc  server.h  test.cc
structure/: Structure.tex  main.bbl  main.blg  ref.bib  struc.tex
tex/: .gitignore  ack.txt  main.aux  main.bbl  main.bib  main.blg  main.out  main.tex  preamble.sty  refs.bib  usenix2019_v3.sty
timeserver/: timeserver.cc
(+1744 files in other folders)
